@@ -22,6 +22,8 @@ import org.apache.tinkerpop.gremlin.jsr223.console.RemoteAcceptor
 
 import java.util.concurrent.atomic.AtomicBoolean
 
+import org.apache.commons.lang3.StringUtils
+
 /**
  * @author Stephen Mallette (http://stephen.genoprime.com)
  */
@@ -104,7 +106,7 @@ class Mediator {
 
     static def readPluginState() {
         def file = new File(ConsoleFs.PLUGIN_CONFIG_FILE)
-        return file.exists() ? file.readLines() : []
+        return file.exists() ? file.readLines().findAll { StringUtils.isNotEmpty(it) } : []
     }
 
     def void close() {
